Fix broken styles for examples

--- a/frontend/themes/docs/basic-layouts.css
+++ b/frontend/themes/docs/basic-layouts.css
@@ -1,7 +1,10 @@
 .basic-layouts-example vaadin-vertical-layout,
 :host(.basic-layouts-example) vaadin-vertical-layout,
 .basic-layouts-example vaadin-horizontal-layout,
-:host(.basic-layouts-example) vaadin-horizontal-layout {
+:host(.basic-layouts-example) vaadin-horizontal-layout,
+.basic-layouts-example .flex-layout,
+:host(.basic-layouts-example) .flex-layout
+{
     border: 1px solid var(--lumo-primary-color);
     border-radius: var(--lumo-border-radius-l);
 }
@@ -9,14 +12,18 @@
 .basic-layouts-example vaadin-vertical-layout.height-4xl,
 :host(.basic-layouts-example) vaadin-vertical-layout.height-4xl,
 .basic-layouts-example vaadin-horizontal-layout.height-4xl,
-:host(.basic-layouts-example) vaadin-horizontal-layout.height-4xl {
+:host(.basic-layouts-example) vaadin-horizontal-layout.height-4xl,
+.basic-layouts-example .flex-layout.height-4xl,
+:host(.basic-layouts-example) .flex-layout.height-4xl {
     height: calc(var(--lumo-size-xl) * 4);
 }
 
 .basic-layouts-example vaadin-vertical-layout.height-5xl,
 :host(.basic-layouts-example) vaadin-vertical-layout.height-5xl,
 .basic-layouts-example vaadin-horizontal-layout.height-5xl,
-:host(.basic-layouts-example) vaadin-horizontal-layout.height-5xl {
+:host(.basic-layouts-example) vaadin-horizontal-layout.height-5xl,
+.basic-layouts-example .flex-layout.height-5xl,
+:host(.basic-layouts-example) .flex-layout.height-5xl {
     height: calc(var(--lumo-size-xl) * 5);
 }
 
